# workflow-orchestration-queue-whiskey54

./: .ai-repository-summary.md  AGENTS.md  Dockerfile  README.md  docker-compose.yml  opencode.json  pyproject.toml  pytest.ini  run_opencode_prompt.sh
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: orchestrator-agent.yml
docs/: implementation-plan.md  new_features.md
docs/.archived/: non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
scripts/: devcontainer-opencode.sh  start-opencode-server.sh
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py  github_events.py  work_item.py
src/queue/: __init__.py  github_queue.py
test/: test-opencode-run.sh
tests/: __init__.py  conftest.py  test_queue.py  test_work_item.py
